--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "require": {
         "php":     "~5.5",
         "ext-pdo": "~1.0",
-        "guzzlehttp/guzzle": "~5.0"
+        "guzzlehttp/guzzle": "6.*"
     },
     "autoload": {
         "psr-0": {
